src/objects/Approvaldocuments__c.object
<CustomObject>
    <fields>
        <fullName>AmountExc__c</fullName>
        <label>金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalProgress__c</fullName>
        <label>承認申請進捗</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>１次承認中</fullName>
                </value>
                <value>
                    <fullName>２次承認中</fullName>
                </value>
                <value>
                    <fullName>３次承認中</fullName>
                </value>
                <value>
                    <fullName>４次承認中</fullName>
                </value>
                <value>
                    <fullName>５次承認中</fullName>
                </value>
                <value>
                    <fullName>最終承認済</fullName>
                </value>
                <value>
                    <fullName>却下</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DraftDepart__c</fullName>
        <formula>DraftUser__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>起案部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftDt__c</fullName>
        <label>起案日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DraftUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>起案者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kamoku__c</fullName>
        <label>科目</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>材料仕入</fullName>
                </value>
                <value>
                    <fullName>売店仕入</fullName>
                </value>
                <value>
                    <fullName>飲料仕入</fullName>
                </value>
                <value>
                    <fullName>室料経費</fullName>
                </value>
                <value>
                    <fullName>ブライダル仕入</fullName>
                </value>
                <value>
                    <fullName>旅館外注費</fullName>
                </value>
                <value>
                    <fullName>役員報酬</fullName>
                </value>
                <value>
                    <fullName>給与手当</fullName>
                </value>
                <value>
                    <fullName>雑給</fullName>
                </value>
                <value>
                    <fullName>法定福利費</fullName>
                </value>
                <value>
                    <fullName>福利厚生費</fullName>
                </value>
                <value>
                    <fullName>旅費交通費</fullName>
                </value>
                <value>
                    <fullName>通信費</fullName>
                </value>
                <value>
                    <fullName>接待交際費</fullName>
                </value>
                <value>
                    <fullName>減価償却費</fullName>
                </value>
                <value>
                    <fullName>販売手数料</fullName>
                </value>
                <value>
                    <fullName>保険料</fullName>
                </value>
                <value>
                    <fullName>修繕費</fullName>
                </value>
                <value>
                    <fullName>消耗品費</fullName>
                </value>
                <value>
                    <fullName>設備消耗品</fullName>
                </value>
                <value>
                    <fullName>支払手数料</fullName>
                </value>
                <value>
                    <fullName>広告宣伝費</fullName>
                </value>
                <value>
                    <fullName>租税公課</fullName>
                </value>
                <value>
                    <fullName>諸会費</fullName>
                </value>
                <value>
                    <fullName>研究研修費</fullName>
                </value>
                <value>
                    <fullName>地代</fullName>
                </value>
                <value>
                    <fullName>リース料</fullName>
                </value>
                <value>
                    <fullName>電力料</fullName>
                </value>
                <value>
                    <fullName>ガス代</fullName>
                </value>
                <value>
                    <fullName>水道料</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastProcessDt__c</fullName>
        <label>最終承認日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>１行39文字、13行以内入力ください。</inlineHelpText>
        <label>趣旨</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </fields>
    <label>稟議</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>稟議名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>